--- a/CSharpMessagingApp/CSharpMessagingApp.csproj
+++ b/CSharpMessagingApp/CSharpMessagingApp.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
